--- a/src/styles/_Herosection.scss
+++ b/src/styles/_Herosection.scss
@@ -13,6 +13,26 @@
     z-index: -999999;
     top: 0;
   }
+  .bannerLg {
+    background-image: url('/image/loginBg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 600px;
+    width: 100%;
+    z-index: -999999;
+    top: 0;
+  }
+  .bannerSignup {
+    background-image: url('/image/signupBg.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 600px;
+    width: 100%;
+    z-index: -999999;
+    top: 0;
+  }
   .banner-checkout {
     background-image: url('/image/checkout.jpeg');
     background-position: bottom;
@@ -32,10 +52,34 @@
     width: auto;
     right: 30px;
   }
+  .banner-quick-action-login {
+    position: relative;
+    border: 6px solid black;
+    padding: 5em 0px;
+    text-align: center;
+    width: auto;
+    right: 30px;
+    top: 20px;
+    z-index: 999999;
+    padding: 2em;
+    // width: 800px
+  }
+  .banner-quick-action-signup {
+    position: relative;
+    border: 6px solid black;
+    padding: 5em 0px;
+    text-align: center;
+    width: auto;
+    right: 30px;
+    top: 20px;
+    z-index: 999999;
+    padding: 2em;
+    // width: 800px
+  }
   .banner-checkout-desc {
     position: relative;
     clip-path: polygon(0 0, 100% 27%, 100% 71%, 0% 100%);
-    background-color:#307a7e;
+    background-color: #307a7e;
     color: white;
     padding: 6em 2em;
     text-align: center;
