--- a/src/styles/_Herosection.scss
+++ b/src/styles/_Herosection.scss
@@ -5,7 +5,8 @@
   top: -80px;
   z-index: 999;
   .banner {
-    background-image: url('/image/banner.jpg');
+    background-image: url('https://res.cloudinary.com/djmo1tdsx/image/upload/v1636859009/multibuy/banner.webp');
+    background-color: #f0a6ae;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
