merchant update order status

--- a/src/styles/_App.scss
+++ b/src/styles/_App.scss
@@ -4,3 +4,8 @@
   color: #000;
   box-sizing: border-box;
 }
+.offlineWrapper {
+  background-color: #f9d3f4;
+  padding: 1em;
+  text-align: center;
+}
