--- a/src/styles/_Herosection.scss
+++ b/src/styles/_Herosection.scss
@@ -58,6 +58,7 @@
     position: relative;
     border: 6px solid black;
     padding: 5em 0px;
+    margin-top: 1em;
     text-align: center;
     width: auto;
     right: 30px;
